--- a/docs/style.css
+++ b/docs/style.css
@@ -61,54 +61,23 @@ body {
 }
 
 /* Countdown Page Styles */
-/* 倒计时页面背景颜色 */
-body {
-    background-color: #3280F6; /* 整个页面的背景颜色 */
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+.countdown-section {
     text-align: center;
+    background-color: #3280F6;
+    color: #FFFFFF;
+    padding: 50px;
 }
 
-/* 倒计时容器居中 */
 .countdown-container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    background-color: transparent; /* 背景颜色设为透明 */
-    color: white; /* 字体颜色设为白色 */
+    gap: 20px;
 }
 
-/* 标题和倒计时 */
-h1 {
-    margin-bottom: 20px;
-    font-size: 2.5rem; /* 可以调整标题大小 */
-}
-
-.countdown {
+.countdown-number {
+    background-color: #222222;
+    padding: 20px;
     font-size: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px; /* 时间部分之间的间隔 */
-}
-
-.countdown div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #222222; /* 数字方框的颜色 */
-    padding: 10px;
-    border-radius: 5px; /* 方框的圆角 */
-}
-
-.countdown span {
-    font-size: 1.5rem; /* 时间单位的大小 */
 }
 
 .ad-space {
